--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="col-md-12">
           <div class="hero-content text-center">
             <h1 class="wow fadeInUp" data-wow-delay="0.1s">GET BACK ON THE TRACK</h1>
-            <p class="wow fadeInUp" data-wow-delay="0.2s"> Virtual Marathon By COEP ZEST </p>
+            <p class="wow fadeInUp" data-wow-delay="0.2s"> Virtual Marathon by COEP ZEST </p>
             <a href="#classes" class="btn btn-action wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">Get Strated</a> </div>
         </div>
       </div>
